@@ -30,4 +30,21 @@
  compatibleWithTraitCollection:nil];
 }
 
+- (id)ifa_propertyValueForIndexPath:(NSIndexPath *)anIndexPath inForm:(NSString *)aFormName createMode:(BOOL)aCreateMode{
+    //    return [self performSelector:NSSelectorFromString([self propertyNameForIndexPath:anIndexPath inForm:aFormName])];
+    return ((id (*)(id, SEL))objc_msgSend)(self, NSSelectorFromString([self ifa_propertyNameForIndexPath:anIndexPath inForm:aFormName
+                                                                           createMode:aCreateMode]));
+}
+
+- (NSString*)ifa_propertyNameForIndexPath:(NSIndexPath *)anIndexPath inForm:(NSString *)aFormName createMode:(BOOL)aCreateMode{
+    return [[IFAPersistenceManager sharedInstance].entityConfig nameForIndexPath:anIndexPath inObject:self inForm:aFormName createMode:aCreateMode];
+}
+
+- (NSString*)ifa_propertyStringValueForIndexPath:(NSIndexPath *)anIndexPath inForm:(NSString *)aFormName
+                                      createMode:(BOOL)aCreateMode calendar:(NSCalendar*)a_calendar{
+    return [self ifa_propertyStringValueForName:[self ifa_propertyNameForIndexPath:anIndexPath inForm:aFormName
+                                                                        createMode:aCreateMode]
+                                       calendar:a_calendar];
+}
+
 @end
